# mimir-wiki

./: .env.example  .gitignore  AGENTS.md  README.md  assistant_ui_dash_onyx_implementation_plan_v2.md  mimir-wiki.yaml  mimir-wiki.yaml.example  mimir_wiki_spec.md  mimir_workflow_goal_spec.md  onyx_api_reference_for_coding_agent.md  pyproject.toml
docs/: architecture.md  cli.md  workflow.md
scripts/: quality.sh
src/mimir_wiki/: __init__.py  cache_reader.py  cli.py  config.py  constants.py  hierarchy.py  pipeline.py  reports.py  schema_export.py  schemas.py  scoring.py  utils.py  visual_extraction.py
src/mimir_wiki/enrichers/: __init__.py  deterministic.py  llm.py
src/mimir_wiki/enrichers/prompts/: candidate_entities-v1.md  classification-v1.md  concepts-v1.md  keywords-v1.md  operational-v1.md  operational_signals-v1.md  quality_warnings-v1.md  semantic-v1.md  summary-v1.md  themes-v1.md
src/mimir_wiki/llm/: base.py  probe.py
src/mimir_wiki/writers/: artifacts.py  onyx_markdown.py
tests/: conftest.py  test_cache_reader.py  test_cli.py  test_config.py  test_llm.py  test_llm_enrichment.py  test_observed_shapes.py  test_pipeline.py  test_redaction.py  test_reports.py  test_schema_export.py  test_smoke_real_cache.py
